fixed horizontals scrollbar issues

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,20 +2,10 @@
 	background-color: var(--dark-blue);
 	display: flex;
 	justify-content: space-around;
-	gap: 1em;
 	position: fixed;
 	bottom: 0;
 	min-width: 100vw;
-	padding: 0 0.5em;
 	z-index: 10;
-	background-color: var(--dark-blue);
-	display: flex;
-	justify-content: space-around;
-	gap: 1em;
-	position: fixed;
-	bottom: 0;
-	min-width: 100vw;
-	padding: 0 0.5em;
 }
 
 .link-container {
@@ -129,6 +119,14 @@ button > .active > .nav-icon {
 .modal > button:hover {
 	background-color: var(--orange-color);
 	color: var(--dark-blue);
+}
+
+@media screen and (min-width: 360px) {
+	.navbar {
+		gap: 1em;
+		justify-content: space-around;
+		padding: 0 0.5em;
+	}
 }
 
 @media screen and (min-width: 1200px) {
